# name: TestLabelsFetcher.test_insert_and_update[uvloop-insert]
  <class 'list'> [
    <class 'dict'> {
      'data': <class 'dict'> {
        'color': '#629f70',
        'count': 0,
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
      'interface': 'labels',
      'operation': 'insert',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'color': '#629f70',
        'count': 0,
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
      'interface': 'labels',
      'operation': 'insert',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'color': '#629f70',
        'count': 0,
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
      'interface': 'labels',
      'operation': 'insert',
    },
  ]
---
# name: TestLabelsFetcher.test_insert_and_update[uvloop-update]
  <class 'list'> [
    <class 'dict'> {
      'data': <class 'dict'> {
        'color': '#629f70',
        'count': 0,
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
      'interface': 'labels',
      'operation': 'update',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'color': '#629f70',
        'count': 0,
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
      'interface': 'labels',
      'operation': 'update',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'color': '#629f70',
        'count': 0,
        'description': 'American whole magazine truth stop whose.',
        'id': 1,
        'name': 'Three',
      },
      'interface': 'labels',
      'operation': 'update',
    },
  ]
---
# name: TestUploadsFetcher.test_insert_and_update[uvloop-insert]
  <class 'list'> [
    <class 'dict'> {
      'data': <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': <UploadType.reads: 'reads'>,
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      'interface': 'uploads',
      'operation': 'insert',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': <UploadType.reads: 'reads'>,
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      'interface': 'uploads',
      'operation': 'insert',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': <UploadType.reads: 'reads'>,
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      'interface': 'uploads',
      'operation': 'insert',
    },
  ]
---
# name: TestUploadsFetcher.test_insert_and_update[uvloop-update]
  <class 'list'> [
    <class 'dict'> {
      'data': <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': <UploadType.reads: 'reads'>,
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      'interface': 'uploads',
      'operation': 'update',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': <UploadType.reads: 'reads'>,
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      'interface': 'uploads',
      'operation': 'update',
    },
    <class 'dict'> {
      'data': <class 'dict'> {
        'created_at': None,
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': None,
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': None,
        'type': <UploadType.reads: 'reads'>,
        'uploaded_at': None,
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      'interface': 'uploads',
      'operation': 'update',
    },
  ]
---
